# fastexif

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: test.sh
src/: endian.rs  error.rs  format.rs  lib.rs  maker.rs  options.rs  rational.rs  tags.rs
src/maker/: apple.rs
src/maker/apple/: bplist.rs
src/tags/: exif.rs  gps.rs  interop.rs  tiff.rs
