[package]
name = "fastexif"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["serde/std", "chrono/std", "log/std"]
serde = ["dep:serde", "chrono/serde", "bitflags/serde"]

[dependencies]
bitflags = { version = "2.10.0" }
chrono = { version = "0.4.42", features = [], default-features = false }
log = { version = "0.4.29", features = [], default-features = false }
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"], default-features = false, optional = true }
